test_suite/tests/ui/identifier/newtype_not_last.stderr
error: `Other` must be the last variant
 --> tests/ui/identifier/newtype_not_last.rs:7:5
  |
3 | #[derive(Deserialize)]
  |          ----------- in this derive macro expansion
...
7 |     Other(String),
  |     ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
